--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": []
+  "browserslist": [],
+  "proxy": "http://localhost:5000"
 }
