--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "config": "^3.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "normalizr": "^3.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
