--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
-    "normalizr": "^3.4.0"
+    "normalizr": "^3.4.0",
+    "react-icons": "^3.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
